# Agent_Arena

./: .dockerignore  .gitignore  Dockerfile  README.md  baseline_inference.py  client.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
agent_arena/: __init__.py  config.py
agent_arena/agent/: __init__.py  agent.py  dqn.py  replay_buffer.py
agent_arena/demo/: __init__.py  visualize.py
agent_arena/env/: __init__.py  arena_env.py  objects.py
agent_arena/evaluator/: __init__.py  metrics.py
agent_arena/openenv/: __init__.py  grader.py  task_definitions.py
agent_arena/plots/: __init__.py  plot_metrics.py
agent_arena/trainer/: __init__.py  train.py
plots/: comparison_summary.json
server/: __init__.py  agent_arena_environment.py  app.py
tests/: test_baseline_inference.py  test_environment.py  test_grader.py  test_inference.py  test_schema_contract.py
